added android target

--- a/katpat-remote/ios/App/App/capacitor.config.json
+++ b/katpat-remote/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.klem.katpatremoteapp",
-  "appName": "Katpat Remote",
+  "appName": "KatPat Remote",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
   "webDir": "build"
