--- a/katpat-remote/package.json
+++ b/katpat-remote/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^1.0.0",
     "@capacitor/cli": "^1.0.0-beta.24",
     "@capacitor/core": "^1.0.0-beta.24",
     "@capacitor/ios": "^1.0.0-beta.24",
