--- a/katpat-remote/package.json
+++ b/katpat-remote/package.json
@@ -2,7 +2,7 @@
   "name": "katpat-remote",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://kaelhem.github.io/katpat/remote-controller",
   "dependencies": {
     "@capacitor/android": "^1.0.0",
     "@capacitor/cli": "^1.0.0-beta.24",
